# TESSNG_SecondaryDev

./: .gitignore  package-lock.json  package.json
docs/: README.md
docs/.vuepress/: config.js
docs/.vuepress/theme/: package.json
docs/.vuepress/theme/components/: Common.vue  DropdownLink.vue  NavLink.vue  NavLinks.vue  (+3 more)
docs/demo/V4.x/TESS_CppAPI_DEMO/: .gitignore  CMakeLists.txt  README.md
docs/demo/V4.x/TESS_CppAPI_DEMO/1.基础功能/停车场仿真/: CMakeLists.txt  MyNet.cpp  MyNet.h  MySimulator.cpp  MySimulator.h
docs/demo/V4.x/TESS_CppAPI_DEMO/1.基础功能/停车场仿真/network/: 上海虹桥枢纽P9-1层停车场test.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/1.基础功能/基础样例/: CMakeLists.txt  TESS_API_EXAMPLE.vcxproj
docs/demo/V4.x/TESS_CppAPI_DEMO/1.基础功能/收费站仿真/: CMakeLists.txt  MyNet.cpp
docs/demo/V4.x/TESS_CppAPI_DEMO/1.基础功能/收费站仿真/network/: 收费站.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/1.基础功能/节点评价/: CMakeLists.txt  MyNet.cpp
docs/demo/V4.x/TESS_CppAPI_DEMO/1.基础功能/行人仿真/: CMakeLists.txt  MyNet.cpp  MyNet.h  MySimulator.cpp  MySimulator.h
docs/demo/V4.x/TESS_CppAPI_DEMO/1.基础功能/行人仿真/network/: 行人案例-天津津静公路-海泰南北大街交叉口-无行人.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/2.信号控制/公交优先信号控制/: CMakeLists.txt  MyNet.h  MySimulator.cpp  MySimulator.h  公交优先控制.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/2.信号控制/匝道自适应信号控制/: CMakeLists.txt  MyNet.cpp  MySimulator.cpp  MySimulator.h  main.cpp  test1.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/2.信号控制/匝道自适应信号控制/Map/: test1.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/2.信号控制/单点信号控制/: CMakeLists.txt  MySimulator.cpp  MySimulator.h
docs/demo/V4.x/TESS_CppAPI_DEMO/2.信号控制/单点信号控制/Map/: 教学视频案例-机动车交叉口.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/2.信号控制/多时段多方案信号控制/: CMakeLists.txt  MyNet.cpp  交叉口.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/2.信号控制/干线绿波信号控制/: CMakeLists.txt  MyNet.cpp  MyNet.h  MyPlugin.cpp  MyPlugin.h  MySimulator.cpp  MySimulator.h  main.cpp  param.json
docs/demo/V4.x/TESS_CppAPI_DEMO/2.信号控制/行人交叉口信号控制/: CMakeLists.txt  MyNet.cpp  MySimulator.cpp  MySimulator.h
docs/demo/V4.x/TESS_CppAPI_DEMO/3.交通事故与施工改扩建/交通事故（创建事故区域）/: CMakeLists.txt  MyNet.cpp  MySimulator.cpp
docs/demo/V4.x/TESS_CppAPI_DEMO/3.交通事故与施工改扩建/交通事故（创建事故区域）/Map/: 上海内环武宁路汇入段_事故版.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/3.交通事故与施工改扩建/交通事故（创建抛锚车辆）/: CMakeLists.txt  MySimulator.cpp  MySimulator.h  单车道事故.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/3.交通事故与施工改扩建/施工改扩建/: CMakeLists.txt  MyNet.cpp  main.cpp  三清高速.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/4.车道管控与车辆引导/优先车道管控/: CMakeLists.txt  GuoHe20230328.tess  MySimulator.cpp  MySimulator.h
docs/demo/V4.x/TESS_CppAPI_DEMO/4.车道管控与车辆引导/应急车道开放管控/: CMakeLists.txt  MySimulator.cpp  MySimulator.h
docs/demo/V4.x/TESS_CppAPI_DEMO/4.车道管控与车辆引导/应急车道开放管控/Map/: 上海内环武宁路汇入段_事故版.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/4.车道管控与车辆引导/车辆路径诱导/: CMakeLists.txt  MySimulator.cpp  MySimulator.h
docs/demo/V4.x/TESS_CppAPI_DEMO/4.车道管控与车辆引导/车辆路径诱导/Map/: 杭州武林门区域路网原方案.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/4.车道管控与车辆引导/车辆速度引导/: CMakeLists.txt  MySimulator.cpp  MySimulator.h
docs/demo/V4.x/TESS_CppAPI_DEMO/4.车道管控与车辆引导/车辆速度引导/Data/: Data.csv  车速引导.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/5.智能网联与自动驾驶/智能网联车辆事故避让/: CMakeLists.txt  MySimulator.cpp  MySimulator.h  智能网联车队.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/5.智能网联与自动驾驶/智能网联车辆事故避让/Map/: GuoHe20230328.tess  教学视频案例-机动车交叉口.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/5.智能网联与自动驾驶/智能网联车辆汇入决策/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h  MySimulator.cpp  MySimulator.h  cvMerge.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/5.智能网联与自动驾驶/智能网联车辆编队行驶/: CMakeLists.txt  MySimulator.cpp  MySimulator.h  cvPlatoon.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/5.智能网联与自动驾驶/自动驾驶仿真/: CMakeLists.txt  MySimulator.cpp  MySimulator.h  智能网联车队.tess
docs/demo/V4.x/TESS_CppAPI_DEMO/include/: IAccidentZoneInterval.h  IBusLine.h  IBusStation.h  IConnector.h  IDecisionPoint.h  IDispatchPoint.h  IEvaluateArea.h  IHelpModifyPedestrianRegionSizeDotItem.h  ILane.h  ILaneConnector.h  ILimitedZone.h  IPassengerRegion.h  IPedestrianPathRegionBase.h  IPedestrianPolygonRegion.h  IPedestrianRectRegion.h  IPedestrianRegion.h  IPedestrianStairRegion.h  IPedestrianType.h  IReduceSpeedArea.h  IReduceSpeedVehiType.h  ISection.h  ISignalGroup.h  ITollPoint.h  IVehicleDrivInfoCollector.h  IVehicleTravelDetector.h  TessInterfaces_Words.h  _tables.h  guiinterface.h  ilink.h  ivehicle.h  ivehicledriving.h  ivehicledrivingtask.h  netinterface.h  simuinterface.h  tessinterfaces_global.h
docs/demo/V4.x/TESS_CppAPI_DEMO/include/Plugin/: StepsPerCall.h  _netitem.h  _netitemtype.h  customersimulator.h  tessplugin.h
docs/demo/V4.x/TESS_CppAPI_DEMO/lib/debug/: TessSupport.lib
docs/demo/V4.x/TESS_CppAPI_DEMO/lib/release/: TessInterfaces.lib
docs/demo/V4.x/TESS_CppAPI_DEMO/x64/Debug/: TESSNG_en_US.qm
docs/demo/V4.x/TESS_CppAPI_DEMO/x64/Release/: TESSNG_en_US.qm
docs/document/: SUMMARY.md
scripts/: check-interface-doc-sync.js
(+508 files in other folders)
